--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -5,3 +5,6 @@ sonar.exclusions=**/**_test.go
 
 sonar.tests=.
 sonar.test.inclusions=**/**_test.go
+
+# Source encoding
+#sonar.sourceEncoding=UTF-8
